fixing a gap

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -33,7 +33,7 @@
 
 @layer base {
   html {
-    overflow-x: hidden;
+    /* overflow-x: hidden; */
     touch-action: manipulation;
     width: 100%;
     position: relative;
